feat: itinerary score 구현